# TuEntrenadorIA

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  render.yaml
docs/: DECISIONES.md
documents/: 2. Presentacion_Proyecto_Tu_Entrenador_IA.docx  3. Politicas_Tu_Entrenador_IA.docx  4. Base_de_Conocimiento_Coach_IA.docx  5. Biblioteca_de_Ejercicios_Coach_IA.docx  6. Manual_Generacion_Rutinas_Coach_IA.docx  7. Prompt_Maestro_Coach_IA.docx
src/tu_entrenador_ia/: __init__.py  __main__.py  cli.py  coach.py  document_loaders.py  docx_reader.py  knowledge.py  langchain_agent.py  models.py  retrieval.py  routine_engine.py  settings.py  text_utils.py  web_app.py  web_rate_limit.py  web_sessions.py
tests/: test_cli.py  test_cohere_integration.py  test_document_loaders.py  test_docx_reader.py  test_knowledge.py  test_langchain_agent.py  test_models.py  test_routine_engine.py  test_settings.py  test_web_app.py  test_web_rate_limit.py  test_web_sessions.py
web/: app.js  index.html  styles.css
