[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "tu-entrenador-ia"
version = "0.4.0"
description = "Agente LangChain con Cohere para consultar documentos y generar rutinas seguras."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Tu Entrenador IA" },
]
dependencies = [
    "cohere>=5.0,<6.0",
    "fastapi>=0.115,<1.0",
    "langchain>=1.0,<2.0",
    "langchain-cohere>=0.4,<1.0",
    "langchain-community>=0.4,<1.0",
    "langchain-text-splitters>=1.0,<2.0",
    "openpyxl>=3.1,<4.0",
    "pandas>=2.2,<4.0",
    "pypdf>=5.0,<7.0",
    "python-docx>=1.1,<2.0",
    "python-dotenv>=1.0,<2.0",
    "python-pptx>=1.0,<2.0",
    "uvicorn>=0.30,<1.0",
    "xlrd>=2.0,<3.0",
]

[project.scripts]
coach-ia = "tu_entrenador_ia.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
